--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Loc Way Maps</title>
         <!-- Ref do cdnjs para Font Awesome -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+        <link rel="stylesheet" href="https://github.com/jpedron13/LOCWAPMAP/blob/ce2e61b44905956d62b2e44e877b395b4760c4c0/index.html">
         <link rel="stylesheet" href="./css/pages/index.css">
     </head>
     <body>
